--- a/apps/frontend/src/modules/shared/components/loader/loader.component.scss
+++ b/apps/frontend/src/modules/shared/components/loader/loader.component.scss
@@ -10,7 +10,7 @@
 .dot {
     width: 10px;
     height: 10px;
-    background-color: #007bff; /* Blue color */
+    background-color: #475374; /* Blue color */
     border-radius: 50%;
     animation: bounce 0.8s infinite ease-in-out;
 }
